Major Change
-Split Project
-Refactored EFXBindings and EFXStyleableProperties
-Add a lot of javadocs
-Implemented CustomConfigurators
-Implemented A Position Property

and much more